# CIT-4004-APL-Group-Project

./: .gitignore  AST.py  Dockerfile  Makefile  README.md  SymbolTable.py  app.py  bnfcode.bnf  code_generator.py  compose.yaml  flake.nix  lexer.py  main.py  old_SymbolTable.py  old_semantics.py  output_code.py  parser.out  parser_1.py  parsetab.py  pyproject.toml  requirements.txt  semantic_analyzer.py  semantics.py  shortsourcecode.py  sourcecode.py  startup.text  symbol_table.py
.github/workflows/: main_typesnake.yml
docs/: FUTURE.md  startup.txt
server/: app.py  main.py
src/typesnake/: lexer.py  parser_1.py  semantic_analyzer.py  symbol_table.py
